# neural-audio-spring-reverb

./: .gitattributes  .gitignore  .gitignore.txt  .gitmodules  Colab.ipynb  CompareSounds.ipynb  CompareSounds16kHz.ipynb  CompareSounds48k.ipynb  LICENSE  PlotAudio.ipynb  README.md  TCN.py  TCN_training-328533.err  TCN_training-328533.out  TCN_training-328534.err  TCN_training-328534.out  TCN_training-328535.err  TCN_training-328535.out  Untitled-1.ipynb  bck_tcn.py  check.ipynb  config.json  config.py  configurations.py  data.py  data_load.py  dataload.py  dataloader.py  dataloader_subset.py  dataloader_test.py  dataset class  egfxset_dc_esr.csv  eval.py  eval_chunk.py  evaluation.py  gpuMemTest.out.0  gpu_job.sh  h5_dataset.ipynb  h5_dataset_exploration.ipynb  h5py_data_exploration.ipynb  (+79 more)
audio/: README.md  beep_clean_mono_44100_16.aif  gtr_clean_mono_44100_16.aif  sax_clean_mono_44100_16.aif  sweep_clean_mono_44100_16.aif  vox_clean_mono_44100_16.aif
checkpoints/: best_model.pt  exp03_test.pth  exp100.pth  model.pt  tcn.pth  tcn100.pth  tcn20230529_114152.pth  tcn20230529_114327.pth  tcn20230529_123804.pth  tcn20230529_132506.pth  tcn20230529_134214.pth  tcn20230529_135815.pth  tcn20230529_182100.pth  tcn20230529_184119.pth  tcn20230529_195639.pth  tcn20230529_212351.pth  tcn20230529_213111.pth  tcn20230529_214048.pth  tcn20230529_215747.pth  tcn20230529_222838.pth  tcn20230529_223538.pth  tcn20230529_232128.pth  tcn20230529_232623.pth  tcn20230529_235451.pth  tcn20230530_020302.pth  tcn20230530_020805.pth  tcn20230530_023154.pth  tcn20230530_034601.pth  tcn20230530_034643.pth  tcn20230530_060623.pth  tcn_100_16_0.001_20230606_023539.pt  tcn_100_8_0.001_20230605_154336.pt  tcn_10_test.pth  tcn_250_16_0.001_20230606_035554.pt  tcn_250_check.pth  tcn_250_test.pth  tcn_250_verif.pth  tcn_25_16_0.001_20230603_101618.pt  tcn_25_16_0.001_20230605_184451.pt  tcn_25_16_0.01_20230603_095610.pt  (+8 more)
configs/: gcn-1047.yaml  gcn-1500.yaml  gcn-2.5.yaml  gcn-2500-eg-c2.yaml  gcn-2750.yaml  gcn-3.yaml  gcn-3250.yaml  gcn-4-32-16-33.yaml  gcn-4-32-16-99.yaml  gcn-4600.yaml  gcn-500-k99.yaml  gcn-6-32-4-41.yaml  gcn-gru-tfilm-41.yaml  gcn-gru-tfilm-6-32-4-41.yaml  gcn-gru-tfilm-6-32-4-99.yaml  gcn-gru-tfilm-99.yaml  gcn-lstm-tfilm-6-32-4-41.yaml  gcn-test.yaml  gcn-tfilm.yaml  gcn.yaml  gru-32-eg-c2.yaml  gru-4layers-updated.yaml  gru-conv-4-128.yaml  gru.yaml  lstm-32-eg-c2.yaml  lstm-4layers-updated.yaml  lstm.yaml  tcn-1700-updated.yaml  tcn-3200-eg-c2.yaml  tcn.yaml  (+2 more)
(+8688 files in other folders)
