[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural_audio_spring_reverb"
version = "0.5.0"
description = "Neural Audio Effect Modelling Strategies for a Spring Reverb"
authors = [{name = "Francesco Papaleo"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "auraloss",
    "h5py",
    "matplotlib",
    "numpy",
    "PyYAML",
    "scipy",
    "setuptools",
    "torch",
    "torchaudio",
    "torchinfo",
    "neutone_sdk",
    "wandb",
    "librosa",
]

[project.urls]
homepage = "https://github.com/francescopapaleo/neural-audio-spring-reverb"
repository = "https://github.com/francescopapaleo/neural-audio-spring-reverb"
documentation = "https://github.com/francescopapaleo/neural-audio-spring-reverb/docs"

[project.scripts]
nafx-springrev = "neural_audio_spring_reverb.__main__:main"
